# api.congress.gov

./: BillEndpointDocumentation.md  BriefEndpointsDocumentation.md  CDG-15041.txt  ChangeLog  ChangeLog.md  EndpointsDocumentation.md  ExpandedBillEndpointDocumentation.md  README.md  secrets.ini
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: python-package-conda.yml
Documentation/: AmendmentEndpoint.md  BillEndpoint.md  BillEndpointDocumentation.md  BoundCongressionalRecordEndpoint.md  BriefEndpointsDocumentation.md  CRSReportEndpoint.md  CommitteeEndpoint.md  CommitteeMeetingEndpoint.md  CommitteePrintEndpoint.md  CommitteeReportEndpoint.md  CommitteeReportsEndpoint.md  CongressEndpoint.md  CongressionalRecordEndpoint.md  DailyCongressionalRecordEndpoint  DailyCongressionalRecordEndpoint.md  HearingEndpoint.md  HouseCommunicationEndpoint.md  HouseRequirementEndpoint.md  HouseRollCallVoteEndpoint.md  MemberEndpoint.md  MembersEndpoint.md  NominationEndpoint.md  SenateCommunicationEndpoint.md  SummariesEndpoint.md  Swagger.yaml  TreatiesEndpoint.md  TreatyEndpoint.md  openapi.json  openapi.yaml  swagger (3).yaml  swagger (5).json  swagger.json  swagger.yaml  swagger.yaml.yaml
api_client/: .gitignore  README.md
api_client/java/: README.md  loc.cfg
api_client/java/client/: loc.cfg
api_client/java/sample_output/: bill_117_hr.txt
api_client/java/src/gov/loc/: Config.java
api_client/python/: .gitignore  README.md  bill_example.py  cdg_cli  cdg_client.py
cpp/: CMakeLists.txt  README.md  build.cmake.sh  config.json
cpp/resources/: key.txt
cpp/src/: get.cc  get.hh  http_client.cc  ssl_read.cc  ssl_read.hh
java/: .gitignore  README.md  loc.cfg  setup.sh
java/client/: loc.cfg
java/output/: bill.txt  bill_117_hr_21_actions.txt  bill_117_hr_21_amendments.txt  bill_117_hr_21_cosponsors.txt  bill_117_hr_21_relatedbills.txt  bill_117_hr_21_summaries.txt  bill_117_hr_21_text.txt  bill_117_hr_21_titles.txt
java/sample_output/: bill.txt  bill_117.txt  bill_117_hr.txt  bill_117_hr_21.txt  bill_117_hr_21_actions.txt  bill_117_hr_21_amendments.txt  bill_117_hr_21_committees.txt  bill_117_hr_21_cosponsors.txt  bill_117_hr_21_relatedbills.txt  bill_117_hr_21_subjects.txt  bill_117_hr_21_summaries.txt  bill_117_hr_21_text.txt  bill_117_hr_21_titles.txt
java/src/gov/loc/: Bill.java  CDGClient.java  Config.java  Main.java  Utils.java
java/src/loc/gov/: Bill.java  Config.java  Main.java  Utils.java
java/src/sample/: Bill.java  Main.java
python/: README.md  bill_example.py  bill_example_output.txt  cdg_cli  cdg_client.py
